--- a/public/my-project/index.html
+++ b/public/my-project/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="index.css" >
 
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="index.css" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <!-- Google Fonts -->
@@ -13,11 +14,6 @@
        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
       <script src="script.js" defer></script>
       
-      <!-- Favicon -->
-      <link rel="icon" href="media/icon.png" type="image/png">
-      <link rel="apple-touch-icon" href="media/icon.png">
-      <meta name="theme-color" content="#0f1724">
-
       <title>Aeito's Portfolio</title>
     </head>
     <body>
@@ -27,9 +23,9 @@
             <h1 class="text-outline">WEERAPHAT UBONKARN</h1><br>
             <h3>PHUKETWITTHAYALAI SCHOOL</h3>
           </section>
-            <a href="#p2" style="text-decoration: none; color:aliceblue">
-              <span class="material-symbols-outlined">arrow_downward</span>
-            </a>
+            <span class="material-symbols-outlined">
+                   <a href="#p2" style="text-decoration: none; color:aliceblue">arrow_downward</a>
+            </span>
         </div>
          <div class="section_2" id="p2">  
         </div>
@@ -66,5 +62,3 @@
       </nav>
     </body>
 </html>
-
-
