--- a/public/my-project/index.html
+++ b/public/my-project/index.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="index.css" >
-
     <head>
-
-      <link rel="icon" href="media/icon.png" type="image/png">
-      
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,600,1,200&icon_names=arrow_downward" />
-       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+      <link rel="stylesheet" href="index.css">
       <script src="script.js" defer></script>
-      
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
       <title>Aeito's Portfolio</title>
     </head>
     <body>
+      <div class="s1 content" id="home">
+      </div>
+      <div class="s2 content" id="profile">
+      </div>
+      <div class="s3 content" id="activities">
+      </div>
+
       <nav class="navbar">
-
-
-        <a href="#" class="toggle-button tweak">
-         <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
-
-        <div class="navbar-links">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#profile">Profile</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#activity">Activity</a></li>
-            <li><a href="#certificate">Certificate</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#" style="color: gray;">About</a></li>
-          </ul>
+        <div class="nav-container">
+          <div class="nav-name"><img src="/public/my-project/media/color-box.png" class="nav-col-box">WEERAPHAT UBONKARN</div>
+          <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="navbar-links">
+            <ul>
+              <li><a href="#home">HOME</a></li>
+              <li><a href="#profile">PROFILE</a></li>
+              <li><a href="#">ACTIVITIES</a></li>
+              <li><a href="#">CERTIFICATES</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
-
       </nav>
     </body>
 </html>
