--- a/public/my-project/index.html
+++ b/public/my-project/index.html
@@ -8,13 +8,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="index.css">
-      <script src="script.js" defer></script>
-
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
       <title>Aeito's Portfolio</title>
     </head>
     <body>
@@ -26,8 +19,7 @@
       </div>
 
       <nav class="navbar">
-        <div class="nav-container">
-          <div class="nav-name"><img src="media/color-box.png" class="nav-col-box">WEERAPHAT UBONKARN</div>
+          <div class="nav-name"><a href="secret.html"><img src="media/color-box.png" class="nav-col-box"></a>WEERAPHAT UBONKARN</div>
           <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -42,7 +34,7 @@
               <li><a href="#">CONTACT</a></li>
             </ul>
           </div>
-        </div>
+        
       </nav>
     </body>
 </html>
