--- a/public/my-project/secret.html
+++ b/public/my-project/secret.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" href="media/icon.png"/>
       <title>Aeito's Portfolio</title>
     </head>
     <body>
@@ -20,11 +21,7 @@
           </a>
           <div class="navbar-links">
             <ul>
-              <li><a href="#home">HOME</a></li>
-              <li><a href="#profile">PROFILE</a></li>
-              <li><a href="#activities">ACTIVITIES</a></li>
-              <li><a href="#">CERTIFICATES</a></li>
-              <li><a href="#">CONTACT</a></li>
+              <li><a href="index.html">HOME</a></li>
             </ul>
           </div>
       </nav>
