--- a/public/my-project/index.html
+++ b/public/my-project/index.html
@@ -7,10 +7,12 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200&icon_names=arrow_circle_down" />
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="media/icon.png"/>
 
-      <title>Aeito's Portfolio</title>
+      <title>Weeraphat Ubonkarn | Portfolio</title>
     </head>
     <body>
       <div class="page-1" id="home">
@@ -22,6 +24,10 @@
         <h2>About Me</h2>
         <p> I'm Weeraphat Ubonkarn, a Grade 11 student at Phuketwittayalai School in the Multiple Intelligences Program with a passion for programming and web development. I also enjoy graphic design and digital art, combining creativity with technology while constantly learning new skills and exploring personal projects. Looking ahead, I'm excited to contribute meaningfully to the tech world through innovation and dedication.</p>
         <div class="image-container"><img src="media/abtmeimg.png"><img src="media/abtmeimg.png"><img src="media/abtmeimg.png"></div>
+        <div id="nav-btn-page-2"><a href="#Skills"><span class="material-symbols-outlined">arrow_circle_down</span></a></div>
+      </div>
+      <div class="page-3" id="Skills">
+
       </div>
         
       <footer class="footer"> WEERAPHAT’S PORTFOLIO AT AEITO90.IN.TH </footer>
