--- a/public/my-project/secret.html
+++ b/public/my-project/secret.html
@@ -9,9 +9,33 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="media/icon.png"/>
-      <title>Aeito's Portfolio</title>
+      <title>Scret Page 👀</title>
     </head>
     <body>
+      <style>
+        #container {
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-image: url(media/secretbg.png);
+          background-size: cover;
+          background-position: center;
+        }
+        #txt {
+          font-family: 'IBM Plex Mono', monospace;
+          font-size: 2rem;
+          color: #ffffff;
+          text-align: center;
+        }
+      </style>
+      <div id="container">
+        <p id="txt">"Well you found me, congratulations.<br> Was it worth it?" - GlaDOS</p>
+        <audio autoplay delay="100">
+          <source src="media/glados.mp3" type="audio/mpeg">
+          
+        </audio>
+      </div>
         <nav class="navbar">
           <div class="nav-name"><a href="secret.html"><img src="media/color-box.png" class="nav-col-box"></a>WEERAPHAT UBONKARN</div>
           <a href="#" class="toggle-button">
